--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,6 +9,7 @@
 
 
     <TextView
+        android:id="@+id/Quikhand.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Weather App"
