--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,37 @@
     tools:context="com.example.hp.jsonparsing.MainActivity">
 
 
+    <TextView
+        android:id="@+id/weathericon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="80sp"
+        android:layout_below="@+id/city"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="54dp"
+         />
+
+    <TextView
+        android:id="@+id/city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:textColor="#44ff4d"
+        android:layout_alignParentStart="true"
+        android:text="city" />
+
+    <TextView
+        android:id="@+id/tempe"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/weathericon"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="80dp"
+        android:text="Temperature"
+         />
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
@@ -19,19 +48,6 @@
         android:layout_marginTop="193dp"
         android:text="CLICK ME" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <TextView
-            android:id="@+id/t"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="TextView"
-           />
-    </android.support.v4.widget.SwipeRefreshLayout>
     <Switch
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
