--- a/app/src/main/res/layout/activity_first_activty.xml
+++ b/app/src/main/res/layout/activity_first_activty.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hp.jsonparsing.FirstActivty">
+    android:background="@drawable/weather"
+    tools:context="com.example.hp.jsonparsing.FirstActivty"
+  >
 
+    <EditText
+        android:layout_width="232dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText"
+        android:id="@+id/country"
+        android:layout_alignStart="@+id/editText"
+        android:layout_marginBottom="26dp"
+        android:hint="Country code" />
     <EditText
         android:id="@+id/editText"
         android:layout_width="232dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:hint="City"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,13 +32,12 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_below="@+id/editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="59dp"
         android:text="GO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
