--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_launcher_background"
+    android:background="@drawable/background"
     tools:context="com.example.hp.jsonparsing.SplashActivity">
 
 
     <TextView
-        android:id="@+id/Quikhand.ttf"
+        android:id="@+id/Quikhand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Weather App"
